swap out images

--- a/scripts/dblp.env
+++ b/scripts/dblp.env
@@ -1,3 +1,3 @@
 TITLE_0="Triangle Vertex Deletion, DBLP Coauthor Graph"
-SUBTITLE_0="The ratio was calculated after every F3 rule execution"
+SUBTITLE_0="The ratio was calculated after every recalculation of H"
 TITLE_1="#Rule Executions"
