--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ qs.md
 venv
 graphs
 data
-test.go
+test*.go
 coauthor.txt
 **/__pycache__
 **/*.pgo
@@ -20,3 +20,5 @@ cvd*
 img/rev*
 tex/test
 scripts/test.py
+data_final/*
+TODO.MD
